@@ -48,7 +48,7 @@ option "radiusserver2"      - "IP address of radius server 2" string default="ra
 option "radiusauthport"     - "Authentication UDP port of radius server" int default="1812" no
 option "radiusacctport"     - "Accounting UDP port of radius server" int default="1813" no
 option "radiussecret"       - "Radius shared secret"          string default="coova-anonymous" no
-option "radiustimeout"      - "Retry timeout in milli seconds" int default="5000" no
+option "radiustimeout"      - "Retry timeout in seconds" int default="30" no
 option "radiusretry"        - "Total number of retries"        int default="6" no
 option "radiusretrysec"     - "Number of retries before using secondary" int default="3" no
 option "radiusnasid"        - "Radius NAS-Identifier"         string default="nas01" no
